feat: FileDownloader v0.6: linked, start/pause.